tests/analyzer/errors/assignment.rv
fn add(a: int) {
    // Can't assign to function parameter
    a = 4
}

fn main() {
    add = 1
    add(5) = 1

    var noval: int
    noval = 1.4
}
